# cli_api

./: .env.sample  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  seed.json
.github/workflows/: codecov.yml
cli_api/: app.py  cli_api.db  config.py  extensions.py
cli_api/auth/: controller.py  interface.py  model.py  schema.py  service.py
cli_api/commands/: __init__.py  db.py
cli_api/common/: errors.py  schema.py  utils.py
cli_api/jobs/: controller.py  interface.py  model.py  schema.py  service.py
cli_api/script/: controller.py  interface.py  model.py  schema.py  service.py  utils.py
docker/postgresql/: Dockerfile
docker/web/: Dockerfile
tests/: conftest.py  test_cli_api.py
tests/auth/: test_controller.py  test_model.py
tests/cli_api/auth/: test_controller.py  test_service.py
tests/cli_api/script/: test_controller.py  test_model.py  test_service.py
tests/cli_api/user/: test_controller.py  test_model.py
tests/jobs/: test_controller.py  test_model.py  test_service.py
tests/script/: test_controller.py  test_model.py  test_service.py
