[tool.poetry]
name = "cli_api"
version = "0.1.0"
description = ""
authors = ["Max Del Giudice <maxdelgiudice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
flask_accepts = "^0.17.4"
marshmallow = "^3.8.0"
flake8 = "^3.8.3"
pylint = "^2.6.0"
jedi = "^0.17.2"
flask_bcrypt = "^0.7.1"
pyjwt = "^1.7.1"
python-dotenv = "^0.14.0"
flask_restx = "^0.2.0"
flask-migrate = "^2.5.3"
psycopg2-binary = "^2.8.6"
docker = "^4.3.1"
redis = "^3.5.3"
rq = "^1.5.2"
flask-redis = "^0.4.0"
Flask-RQ2 = "^18.3"
fakeredis = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
